<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.androidbasictestquestions.MainActivity">

    <LinearLayout
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_bg"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:padding="@dimen/to_left"
            android:text="@string/title"
            android:textSize="24sp" />

        <TextView
            style="@style/question_style"
            android:text="@string/question_1" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/answer_1_1"
                style="@style/options_style"
                android:text="LinearLatout" />

            <RadioButton
                android:id="@+id/answer_1_2"
                style="@style/options_style"
                android:text="RelativeLayout" />
        </RadioGroup>

        <TextView
            style="@style/question_style"
            android:text="@string/question_2" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/answer_2_1"
                style="@style/options_style"
                android:text="android:layout_padding" />

            <RadioButton
                android:id="@+id/answer_2_2"
                style="@style/options_style"
                android:text="android:layout_margin" />

            <RadioButton
                android:id="@+id/answer_2_3"
                style="@style/options_style"
                android:text="android:layout_weight" />
        </RadioGroup>

        <TextView
            style="@style/question_style"
            android:text="@string/question_3" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/answer_3_1"
                style="@style/options_style"
                android:text="android:inputType" />

            <RadioButton
                android:id="@+id/answer_3_2"
                style="@style/options_style"
                android:text="android:text" />

            <RadioButton
                android:id="@+id/answer_3_3"
                style="@style/options_style"
                android:text="android:digits" />

            <RadioButton
                android:id="@+id/answer_3_4"
                style="@style/options_style"
                android:text="android:hint" />
        </RadioGroup>

        <TextView
            style="@style/question_style"
            android:text="@string/question_4" />

        <CheckBox
            android:id="@+id/answer_4_1"
            style="@style/options_style"
            android:text="android:layout_height" />

        <CheckBox
            android:id="@+id/answer_4_2"
            style="@style/options_style"
            android:text="android:layout_width" />

        <CheckBox
            android:id="@+id/answer_4_3"
            style="@style/options_style"
            android:text="android:layout_weight" />

        <CheckBox
            android:id="@+id/answer_4_4"
            style="@style/options_style"
            android:text="android:id" />

        <TextView
            style="@style/question_style"
            android:text="@string/question_5" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/answer_5_1"
                style="@style/options_style"
                android:text="Yes" />

            <RadioButton
                android:id="@+id/answer_5_2"
                style="@style/options_style"
                android:text="No" />
        </RadioGroup>

        <TextView
            style="@style/question_style"
            android:text="@string/question_6" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/answer_6_1"
                style="@style/options_style"
                android:text="vertical" />

            <RadioButton
                android:id="@+id/answer_6_2"
                style="@style/options_style"
                android:text="horizontal" />
        </RadioGroup>

        <EditText
            android:id="@+id/name_of_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:hint="Enter your name here"
            android:textSize="20sp" />

        <Button
            android:id="@+id/submit"
            style="@style/button_style"
            android:onClick="submit"
            android:text="@string/submit" />

    </LinearLayout>

</ScrollView>